# Games-Users-ABMyL-Sqlite

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  build_and_execute.bat  build_and_execute.sh  cmake_install.cmake  main.cpp  to_do.txt
db/: create_tables.sql
include/: DatabaseHandler.h  Handlers.h  IniReader.h  SqliteDatabaseHandler.h
src/: Handlers.cpp  SqliteDatabaseHandler.cpp  main.cpp
uml/: diagramaClases.drawio  diagramaSecuencia.drawio
